Update model viewer source file for rock internal

--- a/ar.html
+++ b/ar.html
@@ -17,7 +17,7 @@
     <h2>استكشاف المكونات الداخلية للصخرة</h2>
 
     <model-viewer 
-        src="rock_internal.glb" 
+        src="rock_internal-v1.glb" 
         ar 
         ar-modes="webxr scene-viewer quick-look" 
         camera-controls 
