--- a/ar.html
+++ b/ar.html
@@ -96,11 +96,12 @@
             ⚠️ تأكد أن الملف <code>rock_internal-v1.glb</code> موجود بنفس المجلد
         </div>
 
-
 <model-viewer
     id="viewer"
-    src="rock_internal-v1.glb"
-    ios-src="rock_internal-v1.usdz" 
+     src="https://github.com/Razanaldakhil/rock_internal/releases/download/v1.0/rock_internal-v1.glb" 
+    
+     ios-src="https://github.com/Razanaldakhil/rock_internal/releases/download/v1.0/AR.usdz" 
+    
     ar
     ar-modes="scene-viewer webxr quick-look"
     ar-scale="fixed"
