--- a/ar.html
+++ b/ar.html
@@ -98,7 +98,7 @@
     id="viewer"
      src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/rock_internal-v1.glb" 
     
-     ios-src="https://github.com/Razanaldakhil/rock_internal/releases/download/v1.0/AR.usdc" 
+     ios-src="https://github.com/Razanaldakhil/rock_internal/blob/main/AR-Rock.usdc" 
     
     ar
     ar-modes="scene-viewer webxr quick-look"
