Update model-viewer source to new AR files

--- a/ar.html
+++ b/ar.html
@@ -96,7 +96,7 @@
         </div>
 <model-viewer
     id="viewer"
-     src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/rock_internal-v1.glb" 
+     src="https://github.com/Razanaldakhil/rock_internal/blob/main/AR-Rock.glb" 
     
      ios-src="https://github.com/Razanaldakhil/rock_internal/blob/main/AR-Rock.usdc" 
     
