--- a/ar.html
+++ b/ar.html
@@ -96,10 +96,9 @@
         </div>
 <model-viewer
     id="viewer"
-     src="https://github.com/Razanaldakhil/rock_internal/blob/main/AR-Rock.glb" 
+     src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.glb"
     
-     ios-src="https://github.com/Razanaldakhil/rock_internal/blob/main/AR-Rock.usdc" 
-    
+ios-src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.usdz"    
     ar
     ar-modes="scene-viewer webxr quick-look"
     ar-scale="fixed"
