--- a/ar.html
+++ b/ar.html
@@ -94,24 +94,24 @@
         <div class="warning" id="warning">
             ⚠️ تأكد أن الملف <code>rock_internal-v1.glb</code> موجود بنفس المجلد
         </div>
+<style>
+   #viewer::part(progress-bar) { background-color: #00c896; height: 10px; }
+</style>
+
 <model-viewer
     id="viewer"
-     src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.glb"
-    
-ios-src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.usdz"    
+    src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.glb" 
+    ios-src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.usdz" 
     ar
-    ar-modes="scene-viewer webxr quick-look"
-    ar-scale="fixed"
+    ar-modes="quick-look webxr scene-viewer"
     camera-controls
     auto-rotate
+    /* هذا السطر يمنع الصخرة من الاختفاء إذا كان حجمها كبيراً */
+    bounds="tight" 
     shadow-intensity="1">
     
     <button slot="ar-button" class="ar-btn">
         📸 افتح الكاميرا (AR)
-    </button>
-
-    <button class="Hotspot" slot="hotspot-1" data-position="0.1m 0.5m 0.1m" data-normal="0m 1m 0m">
-        <div class="HotspotAnnotation">مكونات الصخرة</div>
     </button>
 </model-viewer>
         <div class="info">
