--- a/ar.html
+++ b/ar.html
@@ -458,6 +458,8 @@
                 ios-src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.usdz" 
                 ar
                 ar-modes="quick-look webxr scene-viewer"
+                    ar-scale="auto"  camera-controls
+
                 camera-controls
                 auto-rotate
                 auto-rotate-delay="3000"
@@ -474,7 +476,8 @@
                 interaction-prompt-threshold="2000"
                 loading="eager"
                 reveal="auto">
-                
+                <model-viewer
+  
                 <button slot="ar-button" class="ar-btn">
                     📸 عرض في الواقع المعزز (AR)
                 </button>
