--- a/ar.html
+++ b/ar.html
@@ -468,9 +468,10 @@
                 shadow-intensity="1"
                 exposure="1.2"
                 environment-image="neutral"
-                camera-orbit="45deg 75deg 2.5m"
-                min-camera-orbit="auto auto 1m"
-                max-camera-orbit="auto auto 10m"
+ 
+                camera-orbit="45deg 75deg auto" min-camera-orbit="auto auto auto" max-camera-orbit="auto auto auto">
+
+                
                 touch-action="pan-y"
                 interaction-prompt="auto"
                 interaction-prompt-threshold="2000"
