--- a/ar.html
+++ b/ar.html
@@ -469,7 +469,7 @@
                 exposure="1.2"
                 environment-image="neutral"
  
-                camera-orbit="45deg 75deg auto" min-camera-orbit="auto auto auto" max-camera-orbit="auto auto auto">
+                camera-orbit="45deg 75deg auto" min-camera-orbit="auto auto auto" max-camera-orbit="auto auto auto"
 
                 
                 touch-action="pan-y"
@@ -477,7 +477,7 @@
                 interaction-prompt-threshold="2000"
                 loading="eager"
                 reveal="auto">
-                <model-viewer
+              
   
                 <button slot="ar-button" class="ar-btn">
                     📸 عرض في الواقع المعزز (AR)
