Add hotspot buttons with Arabic labels in ar.html
Added new hotspot buttons for smart camera, Jetson Nano, and UGV base with Arabic labels.

--- a/ar.html
+++ b/ar.html
@@ -477,6 +477,19 @@
                 interaction-prompt-threshold="2000"
                 loading="eager"
                 reveal="auto">
+                <button class="hotspot" slot="hotspot-camera" data-position="0.05m 0.25m 0.1m" data-normal="0m 1m 0m">
+        <div class="hotspot-label">الكاميرا الذكية</div>
+    </button>
+
+    <button class="hotspot" slot="hotspot-nano" data-position="0m 0.15m 0.05m" data-normal="0m 1m 0m">
+        <div class="hotspot-label">وحدة المعالجة (Jetson Nano)</div>
+    </button>
+
+    <button class="hotspot" slot="hotspot-ugv" data-position="0m 0.05m 0m" data-normal="0m 1m 0m">
+        <div class="hotspot-label">قاعدة UGV المجنزرة</div>
+    </button>
+
+  
               
   
                 <button slot="ar-button" class="ar-btn">
