--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ model-viewer button[slot^="hotspot"] {
         <div class="viewer-section">
    <model-viewer
     id="viewer"
-    src="https://github.com/Razanaldakhil/rock_internal/blob/main/AR-Rock_compressed.glb"
+    src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main//AR-Rock_compressed.glb"
     ios-src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.usdz"
     ar
     ar-modes="quick-look webxr scene-viewer"
