--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@ model-viewer button[slot^="hotspot"] {
     src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock_compressed.glb"
     ios-src="https://raw.githubusercontent.com/Razanaldakhil/rock_internal/main/AR-Rock.usdz"
     ar
-    ar-modes="quick-look webxr scene-viewer"
+         ar-modes="webxr scene-viewer quick-look"
+
     ar-scale="auto"
     camera-controls
     auto-rotate
